--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,25 @@ a:hover {
 
 }
 
+.scrollFade {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.scrollFade--hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.scrollFade--visible {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.scrollFade--animate {
+    transition: opacity 0.4s ease-in-out;
+}
+
 .card__custom__img {
     
     position: absolute;
@@ -230,6 +249,7 @@ footer {
     right: 300;
     padding-top: 1rem;
     width: auto;
+    transition: opacity 0.1s;
 }
 
 .skills_projects_link > a {
